# libfreefare-pcsc

./: .gitignore  .oclint  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  HACKING  Jenkinsfile  Makefile.am  NEWS  README  TODO  binding.gyp  configure.ac  libfreefare.pc.in  package.json
cmake/: config_windows.h.cmake
cmake/modules/: FindLIBNFC.cmake  FindLIBPCSCLITE.cmake
contrib/: Makefile.am  libfreefare_zsnippets.vim
contrib/libutil/: Makefile.am  hexdump.c  libutil.h
contrib/linux/: config.h
contrib/linux/arm/: config.h
contrib/mac/: config.h
contrib/macos/: config.h
contrib/win/: config.h  reader.h  stdbool.h
contrib/win32/: err.h  reader.h
debian/: .gitignore  README.Debian  README.source  changelog  control  copyright  libfreefare-bin.install  libfreefare-dev.install  libfreefare-doc.install  libfreefare0.install  rules  watch
examples/: CMakeLists.txt  Makefile.am  mifare-classic-format-pcsc.c  mifare-classic-format.c  mifare-classic-read-ndef-pcsc.c  mifare-classic-read-ndef.c  mifare-classic-write-ndef-pcsc.c  mifare-classic-write-ndef.c  mifare-desfire-access-pcsc.c  mifare-desfire-access.c  mifare-desfire-create-ndef-pcsc.c  mifare-desfire-create-ndef.c  mifare-desfire-ev1-configure-ats-pcsc.c  mifare-desfire-ev1-configure-ats.c  mifare-desfire-ev1-configure-default-key-pcsc.c  mifare-desfire-ev1-configure-default-key.c  mifare-desfire-ev1-configure-random-uid-pcsc.c  mifare-desfire-ev1-configure-random-uid.c  mifare-desfire-format-pcsc.c  mifare-desfire-format.c  mifare-desfire-info-pcsc.c  mifare-desfire-info.c  mifare-desfire-read-ndef-pcsc.c  mifare-desfire-read-ndef.c  mifare-desfire-write-ndef-pcsc.c  mifare-desfire-write-ndef.c  mifare-ultralight-info-pcsc.c  mifare-ultralight-info.c
libfreefare/: CMakeLists.txt  Makefile.am  freefare.3  freefare.c  freefare.h  freefare_error.3  freefare_internal.h  freefare_nfc.h  freefare_pcsc.h  freefare_pcsc_tags.h  mad.3  mad.c  mifare_application.3  mifare_application.c  mifare_classic.3  mifare_classic.c  mifare_desfire.3  mifare_desfire.c  mifare_desfire_aid.3  mifare_desfire_aid.c  mifare_desfire_crypto.c  mifare_desfire_error.c  mifare_desfire_key.3  mifare_desfire_key.c  mifare_ultralight.3  mifare_ultralight.c  tlv.3  tlv.c
test/: Makefile.am  mifare_classic_fixture.c  mifare_classic_fixture.h  mifare_desfire_ev1_fixture.c  mifare_desfire_fixture.c  mifare_desfire_fixture.h  mifare_ultralight_fixture.c  run-test.sh  test_mad.c  test_mifare_application.c  test_mifare_classic.c  test_mifare_classic_create_trailer_block.c  test_mifare_classic_mad.c  test_mifare_classic_sector_boundaries.c  test_mifare_desfire.c  test_mifare_desfire_aes.c  test_mifare_desfire_aid.c  test_mifare_desfire_des.c  test_mifare_desfire_ev1.c  test_mifare_desfire_ev1_3des.c  test_mifare_desfire_ev1_3k3des.c  test_mifare_desfire_ev1_aes.c  test_mifare_desfire_ev1_iso.c  test_mifare_desfire_key.c  test_mifare_ultralight.c  test_tlv.c
test/common/: Makefile.am  mifare_desfire_auto_authenticate.c  mifare_desfire_auto_authenticate.h
